CHANGES IN VERSION 1.11.2
------------------------
 o change plotAnnoBar and plotDistToTSS according to stacking bar order change in ggplot2 (v2.2.0) <2016-12-16, Fri>
   + https://github.com/GuangchuangYu/ChIPseeker/issues/47
   + https://blog.rstudio.org/2016/11/14/ggplot2-2-2-0/

CHANGES IN VERSION 1.11.1
------------------------
 o update startup message <2016-11-09, Wed>

CHANGES IN VERSION 1.10.0
------------------------
 o BioC 3.4 released <2016-10-18, Tue>

CHANGES IN VERSION 1.9.8
------------------------
 o plotAvgProf/plotAvgProf2 order of panel by names of input tagMatrix List <2016-09-25, Sun>
 o test ENSEMBL ID using '^ENS' instead of '^ENSG' <2016-09-20, Tue>
   + https://github.com/GuangchuangYu/ChIPseeker/issues/41

CHANGES IN VERSION 1.9.7
------------------------
 o unit test <2016-08-16, Tue>

CHANGES IN VERSION 1.9.6
------------------------
 o update vignette <2016-08-16, Tue>

CHANGES IN VERSION 1.9.5
------------------------
 o when TxDb doesn't have gene_id information, converting gene ID (ensembl/entrez and symbol) will be omitted instead of throw error. <2016-08-02, Tue>
   + https://www.biostars.org/p/204142
 o bug fixed if testing targetPeak is a list of GRanges objects in enrichPeakOverlap function <2016-07-20, Wed>
   + https://github.com/GuangchuangYu/ChIPseeker/issues/37
   + https://github.com/GuangchuangYu/ChIPseeker/issues/36
 o fixed typo in determine gene ID type <2016-06-21, Tue>
   + https://github.com/GuangchuangYu/ChIPseeker/issues/28#issuecomment-227212519
 o move upsetplot generics to DOSE and import from DOSE to prevent function name conflict <2016-06-14, Tue>

CHANGES IN VERSION 1.9.4
------------------------
 o bug fixed <2016-06-08, Wed>
   + https://github.com/GuangchuangYu/ChIPseeker/issues/17#issuecomment-224407402
   + https://github.com/GuangchuangYu/ChIPseeker/pull/24/files

CHANGES IN VERSION 1.9.3
------------------------
 o use byte compiler <2016-05-18, Wed>